# ruranges-core

./: Cargo.toml  README.md
src/: boundary.rs  cluster.rs  complement.rs  complement_single.rs  extend.rs  group_cumsum.rs  helpers.rs  lib.rs  map_to_global.rs  max_disjoint.rs  merge.rs  nearest.rs  outside_bounds.rs  overlaps.rs  ruranges_structs.rs  sorts.rs  spliced_subsequence.rs  split.rs  subtract.rs  tile.rs
